# 2020-lab-intern-LSTA

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  utils.py
src/intern/: consts.py  data_process.py  main.py  make_embedding.py  model.py  process_data.py  test.py  train.py  utils.py
tests/: test_intern.py
