[tool.poetry]
name = "Intern"
version = "0.1.0"
description = ""
authors = ["Akutagawa <pbwfh384@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
autopep8 = "^1.5.2"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.2"
pynvim = "^0.4.1"
jedi = "^0.17.0"
torch = "1.4.0"
numpy = "^1.18.4"
pyknp = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
